Fix issue with background color not covering the whole page.

--- a/client/stylesheets/sass/_welcome.scss
+++ b/client/stylesheets/sass/_welcome.scss
@@ -4,7 +4,7 @@ div#welcome_body {
   color: $theme3_fg;
   background-color: $theme3_bg;
   text-align: center;
-  height: 100%;
+  min-height: 100%;
 
   hr {
     width: 26em;
